--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,16 +20,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Change directory to backend
-      run: cd .\back\
     - uses: actions/checkout@v3
     - name: Set up JDK 17
       uses: actions/setup-java@v3
+      working-directory: ./back
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
+      working-directory: ./back
       run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
