--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/ReptilianEye/ElevatorsSystem</url>
+        </repository>
+    </distributionManagement>
+
     <build>
         <plugins>
             <plugin>
