Update Docker image publishing workflow

--- a/.github/workflows/docker-package-publish.yml
+++ b/.github/workflows/docker-package-publish.yml
@@ -10,9 +10,10 @@
 name: Publish Docker image
 
 on:
-  release:
-    types: [published]
-
+    push:
+      branches:
+        - 'main'
+  
 jobs:
   push_to_registries:
     name: Push Docker image to multiple registries
