--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -11,7 +11,7 @@ jobs:
           - uses: actions/checkout@v3
           - name: Build and push the image
             run: |
-                docker login --username reptilianeye --password ${{ secrets.GH_PAT }}
+                docker login --username reptilianeye --password ${{ secrets.GH_PAT }} ghcr.io
                 docker build . --tag ghcr.io/reptilianeye/elevators-ghcr:latest
                 docker push ghcr.io/reptilianeye/elevators-ghcr:latest
             
