--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -83,7 +83,7 @@ jobs:
           region: ${{ env.REGION }}
           # NOTE: If required, update to the appropriate source folder
           source: ./
-          allow_unauthenticated: true
+          flags: --allow-unauthenticated
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
