--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -4,6 +4,11 @@ on:
     push:
         branches:
             - main
+        paths-ignore:   
+            - '**/README.md'
+            - '**/LICENSE'
+            
+        
 jobs:
   build_and_publish:
       runs-on: ubuntu-latest
