--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -7,7 +7,9 @@ on:
         paths-ignore:   
             - '**/README.md'
             - '**/LICENSE'
-            
+concurrency:
+    group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+    cancel-in-progress: true            
         
 jobs:
   build_and_publish:
